<resources>
    <string name="app_name">DemoBDS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b>&lt;br />on your smartphone or computer&lt;br />and enter this code</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="back_button_content_description">back</string>
    <string name="cancel_button">Cancel</string>
    <string name="dialog_button_got_it">GOT IT</string>
    <string name="dialog_button_open_help_center">OPEN HELP CENTER</string>
    <string name="dialog_message_incompatible_phone">A Daydream-ready phone is required. Visit the Daydream Help Center for more information.</string>
    <string name="dialog_message_no_cardboard">Get the Cardboard app in order to configure your viewer.</string>
    <string name="dialog_title">Configure</string>
    <string name="dialog_title_incompatible_phone">Incompatible phone</string>
    <string name="dialog_title_vr_core_not_enabled">Setup required</string>
    <string name="dialog_title_vr_core_not_installed">Install required</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_vr_core_not_enabled">This application may not work properly without enabling Google VR Services, please enable this in phone Settings before continuing.</string>
    <string name="dialog_vr_core_not_installed">This application may not work properly without Google VR Services. Please install Google VR Services from the Play Store before continuing.</string>
    <string name="go_to_playstore_button">Go to the Play Store</string>
    <string name="go_to_vr_listeners_settings_button">Go to Settings</string>
    <string name="no_browser_text">No browser to open website</string>
    <string name="place_your_phone_into_cardboard">Place your phone into your Cardboard viewer</string>
    <string name="place_your_viewer_into_viewer_format">Place your phone into your %s viewer</string>
    <string name="settings_button_content_description">settings</string>
    <string name="setup_button">Setup</string>
    <string name="switch_viewer_action">Switch</string>
    <string name="switch_viewer_prompt">Using a different viewer?</string>
    <string name="APTAgentDetailActivity">아파트 중개사상세</string>
    <string name="APTAgentDetailListActivity">아파트 중개사상세</string>
    <string name="APTAgentListActivity">아파트 중개사목록</string>
    <string name="APTContactItemListActivity">아파트 문의한매물</string>
    <string name="APTDetailActivity">아파트 상세</string>
    <string name="APTDetailActivity_B">아파트 상세</string>
    <string name="APTDetailMoreInfoActivity">아파트 총평더보기</string>
    <string name="APTDetailRealTradeActivity">아파트 실거래이력</string>
    <string name="APTDetailRealTradeWebActivity">아파트 실거래이력</string>
    <string name="APTDetailWebActivity">아파트 상세</string>
    <string name="APTFilterActivity">아파트 필터</string>
    <string name="APTFloorPlansDetailActivity">아파트 면적유형상세</string>
    <string name="APTFloorPlansListActivity">아파트 면적유형목록</string>
    <string name="APTInfoModificationActivity">아파트 수정요청등록</string>
    <string name="APTInfoModificationActivity_B">아파트 수정요청등록</string>
    <string name="APTItemDetailActivity">아파트 매물상세</string>
    <string name="APTItemListActivity">아파트 매물목록</string>
    <string name="APTItemListMoreActivity">아파트 면적유형매물목록</string>
    <string name="APTListActivity">아파트 단지목록</string>
    <string name="APTMainSearchBySubwayActivity">아파트 지하철검색</string>
    <string name="APTRecentListActivity">아파트 최근본단지</string>
    <string name="APTRecentViewItemsListActivity">아파트 최근본매물</string>
    <string name="APTRegisterRoomActivity">아파트 매물내놓기</string>
    <string name="APTReviewActivity">아파트 리뷰목록</string>
    <string name="APTReviewDetailActivity">아파트 리뷰상세</string>
    <string name="APTReviewWriteActivity">아파트 리뷰등록</string>
    <string name="APTReviewWriteActivity_B">아파트 리뷰등록</string>
    <string name="APTSearchDanjiActivity">아파트 검색</string>
    <string name="APTVRActivity">아파트 VR</string>
    <string name="APTZBPriceActivity">아파트 직방시세</string>
    <string name="APTZzimListActivity">아파트 찜한단지</string>
    <string name="AccountAgentCompleteActivity">회원가입 중개사완료</string>
    <string name="AccountCertActivity">회원가입 인증</string>
    <string name="AccountFindActivity">로그인 이메일찾기</string>
    <string name="AccountFindPWActivity">로그인 비밀번호찾기</string>
    <string name="AccountFindResultActivity">로그인 이메일확인</string>
    <string name="AccountPWActivity">로그인 인증</string>
    <string name="AccountSignInActivity">로그인 이메일</string>
    <string name="AccountSignUpActivity">회원가입 이메일</string>
    <string name="AccountSignUpAgentActivity">회원가입 중개사</string>
    <string name="AccountSignUpMoreInfoActivity">회원가입 추가정보등록</string>
    <string name="AgentDetailActivity">원룸 안심중개사상세</string>
    <string name="AptDetailQuotationChartFull">아파트 시세 가로보기</string>
    <string name="AptDetailViewListActivity">아파트 임장정보</string>
    <string name="BannerActivity">이벤트목록</string>
    <string name="CallUploadFormActivity">통화녹음</string>
    <string name="ChangeNameActivity">내정보 이름변경</string>
    <string name="ChangePWActivity">내정보 비밀번호변경</string>
    <string name="ChangePhoneActivity">내정보 번호변경</string>
    <string name="ContactEmailActivity">문의하기</string>
    <string name="DetailMapActivity">위치보기</string>
    <string name="DetailViewActivity">원룸 매물상세</string>
    <string name="ImageViewerActivity">이미지</string>
    <string name="InternalWebActivity">웹뷰</string>
    <string name="IntroActivity">튜토리얼</string>
    <string name="ListFavoriteAgentActivity">원룸 안심즐겨찾기목록</string>
    <string name="ListItemsActivity">원룸 지역목록</string>
    <string name="ListItemsAdActivity">원룸 지하철목록</string>
    <string name="ListOfficetelBuildingActivity">원룸 단지매물목록</string>
    <string name="ListOfficetelItemsActivity">원룸 단지지역목록</string>
    <string name="ListRewardRequestActivity">원룸 문의한매물</string>
    <string name="ListUserItemsAdActivity">원룸 중개사상세</string>
    <string name="ListUserItemsReadActivity">원룸 최근본방</string>
    <string name="ListUserItemsZzimActivity">원룸 찜한방</string>
    <string name="MainActivity">메인</string>
    <string name="MainSearchSubwayActivity">원룸 지하철검색</string>
    <string name="NotiCenterActivity">알림센터</string>
    <string name="PermissionActivity">권한 요청</string>
    <string name="PushSettingActivity">알림 설정</string>
    <string name="agent_sign_up">중개사무소 가입하기</string>
    <string name="login">로그인</string>
    <string name="menu_contact_apt_item">문의한 아파트 매물</string>
    <string name="menu_contact_room">문의한 원룸 매물</string>
    <string name="menu_recent_apt_item">최근 본 아파트 매물</string>
    <string name="menu_search_apt_item">아파트 등록 번호로 조회</string>
    <string name="normal_sign_up">일반회원 가입하기</string>
    <string name="sample_desc">상도역과 숭실대입구역이 가깝습니다. 깨끗한 일체형 원룸입니다.</string>
    <string name="sample_title">1000/30</string>
    <string name="sample_total">20,183</string>
    <string name="txt_empty" />
    <string name="txt_map_btn_list">이 지역 목록보기</string>
    <string name="txt_map_searchresult">검색 결과</string>
    <string name="txt_map_searchresult_count">개</string>
    <string name="txt_soldout">거래완료</string>
</resources>