<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="62.0dip"
    android:background="@color/grey11">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="20.0dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_map_searchresult"
            android:textColor="@color/grey2"
            android:textSize="@dimen/text_small" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_listsize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_total"
                android:textColor="@color/grey1"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_map_searchresult_count"
                android:textColor="@color/grey1"
                android:textSize="@dimen/text_small" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/btn_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10.0dip">

        <TextView
            style="@style/ZigbangOrangeButton"
            android:layout_width="wrap_content"
            android:text="@string/txt_map_btn_list"
            android:textSize="@dimen/text_large" />
    </FrameLayout>
</RelativeLayout>